MDEV-8018: main.multi_update fails with --ps-protocol

save_prep_leaf_tables() made recursive to work with underlying view

Arena restoiring fixed in case of EOM.